--- a/src/01-color-switcher.html
+++ b/src/01-color-switcher.html
@@ -8,9 +8,18 @@
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
-
-    <button type="button" data-start>Start</button>
-    <button type="button" data-stop>Stop</button>
+    <h1 class="text-up-btn elegantshadow" >поменять цвет</h1>
+    
+    <div class="btn-stop-start-div-Center">
+      <button class="btn btn-primary btn-secondary" type="button" data-start>
+        Start
+      </button>
+      <button class="btn btn-primary btn-secondary" type="button" data-stop>
+        Stop
+      </button>
+    </div>
+    <p class="text-color elegantshadow">#ffffff</p>
+    
 
     <script src="js/01-color-switcher.js" type="module"></script>
   </body>
