--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -6,27 +6,27 @@
     <title>Countdown timer</title>
     <link rel="stylesheet" href="css/common.css" />
   </head>
-  <body>
+  <body class = "body2">
     <p><a href="index.html">Go back</a></p>
 
     <input type="text" id="datetime-picker" />
-    <button type="button" data-start>Start</button>
-
-    <div class="timer">
-      <div class="field">
-        <span class="value" data-days>00</span>
+    <button type="button " class="bot5" data-start>Start</button>
+<h1 class="title"><span>2022</span> GoIt</h1>
+    <div class="timer countdown-container">
+      <div class="field ">
+        <span id="days" class="value big-text" data-days>00</span>
         <span class="label">Days</span>
       </div>
-      <div class="field">
-        <span class="value" data-hours>00</span>
+      <div class="field ">
+        <span id="hours" class="value big-text" data-hours>00</span>
         <span class="label">Hours</span>
       </div>
-      <div class="field">
-        <span class="value" data-minutes>00</span>
+      <div class="field ">
+        <span id="min" class="value big-text" data-minutes>00</span>
         <span class="label">Minutes</span>
       </div>
-      <div class="field">
-        <span class="value" data-seconds>00</span>
+      <div class="field ">
+        <span id="sec" class="value big-text" data-seconds>00</span>
         <span class="label">Seconds</span>
       </div>
     </div>
@@ -34,3 +34,30 @@
     <script src="js/02-timer.js" type="module"></script>
   </body>
 </html>
+<!-- <body>
+  <div class="overlay"></div>
+  <div class="wrapper">
+  <div class="">
+  <h1 class="title"><span>2021</span> ЗДЕСЬ НАЗВАНИЕ САЙТА</h1>
+  <div class="countdown-container">
+  <div>
+  <p id="days" class="big-text">0</p>
+  <span>Days</span>
+  </div>
+  <div>
+  <p id="hours" class="big-text">0</p>
+  <span>Hours</span>
+  </div>
+  <div>
+  <p id="min" class="big-text">0</p>
+  <span>Min</span>
+  </div>
+  <div>
+  <p id="sec" class="big-text">0</p>
+  <span>Sec</span>
+  </div>
+  </div>
+  </div>
+  </div>
+
+</body> -->
